apps/rpe/ithc/base/pdf-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: rpe-pdf-service
  namespace: rpe
spec:
  rules:
    - host: cmc-pdf-service-ithc.service.core-compute-ithc.internal
      http:
        paths:
          - backend:
              service:
                name: pdf-service-java
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
